src/runtime/loop_tests/snapshots/pebble__runtime__loop_tests__profiles__effective_tools_openai.snap
---
source: src/runtime/loop_tests/profiles.rs
expression: rendered
---
nothing configured:
  apply_patch
  glob
  grep
  read_file
  shell
  update_plan
  web_fetch
  write_file
search:
  apply_patch
  glob
  grep
  read_file
  shell
  update_plan
  web_fetch
  web_search
  write_file
subagents:
  apply_patch
  close_agent
  glob
  grep
  read_file
  send_input
  shell
  spawn_agent
  update_plan
  wait
  web_fetch
  write_file
search + subagents (also what a child is shown):
  apply_patch
  close_agent
  glob
  grep
  read_file
  send_input
  shell
  spawn_agent
  update_plan
  wait
  web_fetch
  web_search
  write_file
a skill was discovered:
  apply_patch
  glob
  grep
  read_file
  shell
  update_plan
  use_skill
  web_fetch
  write_file
everything, root only:
  apply_patch
  close_agent
  glob
  grep
  read_file
  request_user_input
  send_input
  shell
  spawn_agent
  update_plan
  use_skill
  wait
  web_fetch
  web_search
  write_file
